applications/wings/ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: wings-api-external
  namespace: wings
subsets:
- addresses:
  - ip: 69.62.95.160
  ports:
  - port: 8080
    name: wings-api
  - port: 2022
    name: wings-sftp
---
apiVersion: v1
kind: Service
metadata:
  name: wings-api-external
  namespace: wings
spec:
  ports:
  - port: 8443
    targetPort: 8443
    name: wings-api
  - port: 2022
    targetPort: 2022
    name: wings-sftp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wings-api-ingress
  namespace: wings
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: wings.kevindev.com.br
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wings.kevindev.com.br
    secretName: wings-api-tls
  rules:
  - host: wings.kevindev.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wings-api-external
            port:
              number: 8443
